--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,17 +5,31 @@ pluginManagement {
         def flutterSdkPath = properties.getProperty("flutter.sdk")
         assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
         return flutterSdkPath
-    }
-    settings.ext.flutterSdkPath = flutterSdkPath()
+    }()
+    //settings.ext.flutterSdkPath = flutterSdkPath()
+    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
 
-    includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
+    //includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
 
-    plugins {
-        id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
-        id "com.android.application" version "7.3.0" apply false
-        id "org.jetbrains.kotlin.android" version "1.9.0" apply false
+ repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
     }
+    // plugins {
+    //     id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
+    //     id "com.android.application" version "7.3.0" apply false
+    //     id "org.jetbrains.kotlin.android" version "1.9.0" apply false
+    // }
 }
+plugins {
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "com.android.application" version "8.7.1" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.0" apply false
+    id "com.google.gms.google-services" version "4.4.0" apply false
+    id "com.google.firebase.crashlytics" version "2.9.9" apply false
+}
+
 
 include ":app"
 
